...

    <string name="search_location_hint">Search location</string>

    <!--    Errors message    -->
    <string name="location_permission_error">"We don't have permissions to get your current location, so we can't help to find automatically nearest trash around you :("</string>
    <string name="trash_no_information">"There's no information about this trash"</string>
    <string name="dataset_not_found">"Sorry, your locality haven't provided any information about the trash location"</string>
    <string name="twitter_not_found">"We couldn't find the twitter app"</string>
    <string name="gmail_not_found">"We couldn't find the gmail app"</string>

    <!--    Information message    -->
    <string name="dataset_found">"Finding nearest trash around you…"</string>
    <string name="contact_message">Dear user,\n\nYou can use Gmail or Twitter to contact me for any feature or error about TrashLocator or any request you want from me.\n\nThank you.</string>
    <string name="trash_message">"Here it displays the quantity of trash that each locality has, for now we only have 3 localities."</string>

    <!--    Content Description-->
    <string name="toolbar_sandwich">Open the drawer</string>
    <string name="gmail_contact">Gmail Icon</string>
...
