...
            <!--                android:layout_height="wrap_content"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                android:visibility="visible"/>-->

            <EditText
                android:id="@+id/ETsearchLocation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toEndOf="@id/toolbarSandwich"
                app:layout_constraintEnd_toEndOf="parent"
...
